--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <title>Pod</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,54 +10,17 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
+  
   <body style="background-color:black; color:white;">
-<ul class="nav nav-tabs">
+  <ul class="nav nav-tabs">
   <li>
     <a href="project.html" title="Home"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a>
   </li>
-  <li class="active"><a href="about.html" title="About"><img src="http://i.imgur.com/W38JOgd.jpg"></a></li>
+  <li><a href="about.html" title="About"><img src="http://i.imgur.com/W38JOgd.jpg"></a></li>
   <li><a href="weather.html" title="Weather"><img src="http://i.imgur.com/s2AIbEM.jpg"></a></li>
   <li><a href="lights.html" title="Lights"><img src="http://i.imgur.com/y4cdFTM.jpg"></a></li>
   <li><a href="power.html" title="Power"><img src="http://i.imgur.com/jMNRGzh.jpg"></a></li>
   <li><a href="doors.html" title="Doors"><img src="http://i.imgur.com/i5cIKIg.jpg"></a></li>
-  <li><a href="temp.html"  title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
+  <li class="active"><a href="temp.html" title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
   <li><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 </ul>
-
-	<head>
-		<link href="css/bootstrap.css" rel="stylesheet" media="screen">
-		<script src="js/jquery-1.11.1.js" type="text/javascript"></script>
-	</head>
-	<body>
-		<swag id="swag" class="swagM">
-			<swag class="swagR">
-				<swag class="swag">
-					<!-- This might actually be an interesting
-							background effect if I tuned down the colour
-							and timing so it was a lot more subtle,
-							and wrote "pod" instead of "bro". -->
-					pod
-				</swag>
-			</swag>
-		</swag>
-		
-		<script type="text/javascript">
-			var swag = $('#swag');
-			broCount = 1;
-			function addBro() {
-				broCount += 1;
-				if (broCount > 100)
-				{
-					// Little precaution just incase someone leaves their
-					//  browser open on this page before we get rid of this
-					return;
-				}
-				var moreswag = swag.clone();
-				moreswag.appendTo('body');
-				moreswag.css({left:Math.random() * window.innerWidth,top:Math.random() * window.innerHeight, color: "#"+((1<<24)*Math.random()|0).toString(16)})
-			}
-			
-			setInterval(addBro, 500);
-		</script>
-	</body>
-</html>
