--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -16,7 +16,7 @@
 	</script>
 	</head>
 
-	<body style="background-color:black; color:white;">
+	<body>
 	  <ul class="nav nav-tabs">
 		<li><a href="project.html" title="Home"><img src=
 		"http://i.imgur.com/pRt9NhZ.jpg" /></a></li>
