--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -10,7 +10,7 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
-  <body style="background-color:black; color:white;">
+  <body>
   	<!--	<h3>Pod</h3>
 
     	<a href="lights.html"><div class="btn btn-info">Lights</div></a>
