--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -11,7 +11,8 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
-  <body style="background-color:black; color:white;">
+  <body>
+  	<center>
 <ul class="nav nav-tabs">
   <li>
     <a href="project.html" title="Home"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a>
@@ -60,5 +61,6 @@
 			
 			setInterval(addBro, 500);
 		</script>
+	</center>
 	</body>
 </html>
