--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -10,7 +10,7 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
-  <body style="background-color:black; color:white;">
+  <body>
 <ul class="nav nav-tabs">
   <li>
     <a href="project.html" title="Home"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a>
