--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -22,6 +22,7 @@
 	  <li class="active"><a href="temp.html" title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
 	  <li><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 	</ul>
+	</div>
 	<div class="container">
 		<div class="page-header page-header-container">
 		  <p><h3>Outdoor Temperature: <span id="OutdoorTemp"></span>&deg;C</h3></p>
