added open/close windows

--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -24,3 +24,21 @@
   <li class="active"><a href="temp.html" title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
   <li><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 </ul>
+
+<div class="page-header">
+  <h1>About Us</h1>
+  
+</div>
+
+
+
+
+
+
+
+
+
+
+</body>
+
+</html>
