--- a/Webpage/power.html
+++ b/Webpage/power.html
@@ -23,6 +23,8 @@
   <li><a href="temp.html" title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
   <li><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 </ul>
+<p style="margin-top:20px">
 <h4>Current usage: 1.24 kWh</h4>
 <h4>Cost per hour: &pound;0.1344 </h4>
+</p>
 </body>
