--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -11,18 +11,18 @@
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
   <body>
-<ul class="nav nav-tabs">
-  <li>
-    <a href="project.html" title="Home"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a>
-  </li>
-  <li><a href="about.html" title="About"><img src="http://i.imgur.com/W38JOgd.jpg"></a></li>
-  <li><a href="weather.html" title="Weather"><img src="http://i.imgur.com/s2AIbEM.jpg"></a></li>
-  <li><a href="lights.html" title="Lights"><img src="http://i.imgur.com/y4cdFTM.jpg"></a></li>
-  <li><a href="power.html" title="Power"><img src="http://i.imgur.com/jMNRGzh.jpg"></a></li>
-  <li><a href="doors.html" title="Doors"><img src="http://i.imgur.com/i5cIKIg.jpg"></a></li>
-  <li><a href="temp.html" title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
-  <li class="active"><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
-</ul>
+	<div>
+		<ul class="nav nav-tabs">
+		  <li><a href="project.html" title="Home"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a></li>
+		  <li><a href="about.html" title="About"><img src="http://i.imgur.com/W38JOgd.jpg"></a></li>
+		  <li><a href="weather.html" title="Weather"><img src="http://i.imgur.com/s2AIbEM.jpg"></a></li>
+		  <li><a href="lights.html" title="Lights"><img src="http://i.imgur.com/y4cdFTM.jpg"></a></li>
+		  <li><a href="power.html" title="Power"><img src="http://i.imgur.com/jMNRGzh.jpg"></a></li>
+		  <li><a href="doors.html" title="Doors"><img src="http://i.imgur.com/i5cIKIg.jpg"></a></li>
+		  <li><a href="temp.html" title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
+		  <li class="active"><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
+		</ul>
+	</div>
 <form style="margin-top:20px">
 <input type="radio" name="sex" value="Holiday" onclick="changeMode(holiday)"> Holiday mode<br>
 <p> This is a mode which turns off the power in your home for when you are away for a long period of time</p><br>
