--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -26,7 +26,8 @@
 	</div>
 	
 	<div class="page-header" >
-      <p><h3 style="display:block"><img id="iconx" src="">&nbsp;&nbsp;Detailed current weather for <span id="APILocation"></span></h3></p>
+      <p><h
+	  3 style="display:block"><img id="iconx" src="">&nbsp;&nbsp;Detailed current weather for <span id="APILocation"></span></h3></p>
     </div>	
 	<ul class="list-group">
 	
