--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -60,7 +60,9 @@
 		<br />
 		<br />
 		<script type="text/javascript">
-		  windowStatus();
+      windowStatus();
+      windowChange();
+      doorChange();
 		  doorsStatus();
 		</script>
 	  </div>
