--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -27,7 +27,9 @@
 
 <form>
 
-<br><br>
+<br>
+<h3>Lights Status <span id="LightsStatus" class="label label-success">Fail</span></h3>
+<br>
 <label class="btn btn-default" onclick="LightsOn(true)" name="sex"><input type="radio" name="sex" value="On">Lights On</input></label>
 <label class="btn btn-default" onclick="LightsOn(false)" name="sex"><input type="radio" name="sex" value="Off">Lights Off</input></label
 </form>
