--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -32,7 +32,7 @@
 <p>maybe some more here</p>
 <br>
 <p>When designing the application we split the tasks into groups of people who felt comfortable with what they were doing.</p>
-<p>So, Maddy & Matt worked with CSS and HTML on the front-end user interface on the website, while Tamara worked with JavaScript and Ashley worked with Python and set up the Minecraft server.</p>
+<p>Maddy & Matt worked with CSS and HTML, while Tamara worked with JavaScript and Ashley worked with Python and set up the Minecraft server.</p>
 <br>
 <p>Tamara is the worst</p>
 <p>Tamara trod on a seagull</p>
