--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -31,7 +31,7 @@
     -->
 	
     <div class="page-header">
-      <p><h3>Outdoor Temperature: <span id="OutdoorTemp"></span>&deg;C</h3></p>
+      <p><h3>Outdoor temperature: <span id="OutdoorTemp"></span>&deg;C</h3></p>
     </div>
 	
 	
