LIGHTS PAGE DONE

--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -28,7 +28,7 @@
 <form>
 
 <br>
-<h3>Lights Status <span id="LightsStatus" class="label label-success">Fail</span></h3>
+<h3>Lights Status <span id="lightsStatus" class="label label-success">Fail</span></h3>
 <br>
 <label class="btn btn-default" onclick="LightsOn(true)" name="sex"><input type="radio" name="sex" value="On">Lights On</input></label>
 <label class="btn btn-default" onclick="LightsOn(false)" name="sex"><input type="radio" name="sex" value="Off">Lights Off</input></label
@@ -37,7 +37,7 @@
   </body>
   
   <script>
-  LightsOn();
+
   lightsStatus(); 
   </script>
   
