--- a/Webpage/power.html
+++ b/Webpage/power.html
@@ -24,7 +24,13 @@
 		</ul>
 	</div>
 <p style="margin-top:20px">
-<h4>Current usage: 1.24 kWh</h4>
+
+<div class="alert alert-info" role="alert">
+<h4>Current usage:</h4> <span id="usage"></span> 
 <h4>Cost per hour: &pound;0.1344 </h4>
+</div>
 </p>
+<script>
+appliances();
+</script>
 </body>
