--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -11,6 +11,7 @@
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
   <body>
+ <img style="float:left; width:175px; border-radius:0;" src="http://i.imgur.com/JrDszC3.png">
 <ul class="nav nav-tabs">
   <li>
     <a href="project.html" title="Home"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a>
@@ -28,15 +29,9 @@
 <p>Pod is an application that allows you to control your house remotely. It is designed to allow you to transform your home into a 'smart house'.</p>
 <br>
 <p>It can be used in combination with your smart phone, allowing you to check whether doors/windows are locked and also whether the heating is on. You can also check forecasts and use these to either turn the heating on/off.</p>
-<p>more info about pod n shit</p>
-<p>maybe some more here</p>
 <br>
 <p>When designing the application we split the tasks into groups of people who felt comfortable with what they were doing.</p>
 <p>Maddy & Matt worked with CSS and HTML, while Tamara worked with JavaScript and Ashley worked with Python and set up the Minecraft server.</p>
-<br>
-<p>Tamara is the worst</p>
-<p>Tamara trod on a seagull</p>
-<p>She's still bitter.</p>
 <br>
 <p>Pod's interface is clean and simple, with an intuitive layout. This allows for quick and easy use, anytime, anywhere.</p>
 
