--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -13,6 +13,7 @@
   
 <body>
 	<div>
+    <img style="float:left; width:175px; border-radius:0;" src="http://i.imgur.com/JrDszC3.png">
 		<ul class="nav nav-tabs">
 		  <li><a href="project.html" title="Home"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a></li>
 		  <li><a href="about.html" title="About"><img src="http://i.imgur.com/W38JOgd.jpg"></a></li>
