--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -17,6 +17,7 @@
 	</head>
 
 	<body>
+    <img style="float:left; width:175px; border-radius:0;" src="http://i.imgur.com/JrDszC3.png">
 	<div>
 		<ul class="nav nav-tabs">
 		  <li><a href="project.html" title="Home"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a></li>
