--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -11,6 +11,7 @@
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
   <body>
+    <img style="float:left; width:175px; border-radius:0;" src="http://i.imgur.com/JrDszC3.png">
 	<div>
 		<ul class="nav nav-tabs">
 		  <li><a href="project.html" title="Home"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a></li>
