m team this ones for you
ok when you sync this you should see ive added some text boxy things on
some of the pages and they look p cool
can you mess with the centralisation of these and the colours if you
dont like them being exactly right?
Also making the about page nicer would b cool too
you two can do this tomorrow morning while we're doing the video i guess
idk?
I also finished the power page in terms of, i think it works, and it
feels like it works, but i havent tested it . it also doesnt "look"
perfect but eh

--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -26,14 +26,35 @@
 </ul>
 
 <br><br>
-<p>Pod is an application that allows you to control your house remotely. It is designed to allow you to transform your home into a 'smart house'.</p>
+<div class="panel panel-info" style="width:800px; margin-left:auto">
+<div class="panel-heading">About the app</div>
+  <div class="panel-body"  style="color:LightSeaGreen ;">
+<p>Pod is an application that allows you to control your house remotely. It is designed to allow you to transform your home into a 'smart house'.
 <br>
-<p>It can be used in combination with your smart phone, allowing you to check whether doors/windows are locked and also whether the heating is on. You can also check forecasts and use these to either turn the heating on/off.</p>
+It can be used in combination with your smart phone, allowing you to check whether doors/windows are locked and also whether the heating is on. 
 <br>
-<p>When designing the application we split the tasks into groups of people who felt comfortable with what they were doing.</p>
-<p>Maddy & Matt worked with CSS and HTML, while Tamara worked with JavaScript and Ashley worked with Python and set up the Minecraft server.</p>
+You can also check forecasts and use these to either turn the heating on/off.
 <br>
-<p>Pod's interface is clean and simple, with an intuitive layout. This allows for quick and easy use, anytime, anywhere.</p>
+Pod's interface is clean and simple, with an intuitive layout. This allows for quick and easy use, anytime, anywhere.</p>
+</div>
+</div>
+</div>
+<br><br>
+<div class="panel panel-info" style="width:800px; ">
+<div class="panel-heading">About us</div>
+  <div class="panel-body"  style="color:LightSeaGreen ;">
+
+<p>When designing the application we split the tasks into groups of people who felt comfortable with what they were doing.
+Maddy & Matt worked with CSS and HTML, while Tamara worked with JavaScript and Ashley worked with Python and set up the Minecraft server.</p>
+<br>
+
+</div>
+</div>
+</div>
+
 
 </body>
+
+
+
 </html>
