--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -26,15 +26,15 @@
 		</ul>
 	</div>
 
-<form>
-
-<br>
-<h3>Lights Status <span id="lightsStatus" class="label label-success">Fail</span></h3>
+<div class="panel panel-info" style="width:800px;">
+<div class="panel-heading">Lights Status <span id="lightsStatus" class="label label-success">Fail</span></div>
+  <div class="panel-body"  style="color:LightSeaGreen ;">
 <br>
 <label class="btn btn-default" onclick="LightsOn(true)" name="sex"><input type="radio" name="sex" value="On">Lights On</input></label>
 <label class="btn btn-default" onclick="LightsOn(false)" name="sex"><input type="radio" name="sex" value="Off">Lights Off</input></label
 </form>
-
+</div>
+</div>
   </body>
   
   <script>
