--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -26,9 +26,9 @@
 </ul>
 
 <br><br>
-<div class="panel panel-info" style="width:800px; margin-left:auto">
-<div class="panel-heading">About the app</div>
-  <div class="panel-body"  style="color:LightSeaGreen ;">
+<div class="panel panel-info" style="width:800px; margin:auto">
+<div class="panel-heading"><h3>About the app</h3></div>
+  <div class="panel-body"  style="color:LightSeaGreen; Text-align:left;">
 <p>Pod is an application that allows you to control your house remotely. It is designed to allow you to transform your home into a 'smart house'.
 <br>
 It can be used in combination with your smart phone, allowing you to check whether doors/windows are locked and also whether the heating is on. 
@@ -40,9 +40,9 @@ Pod's interface is clean and simple, with an intuitive layout. This allows for q
 </div>
 </div>
 <br><br>
-<div class="panel panel-info" style="width:800px; ">
-<div class="panel-heading">About us</div>
-  <div class="panel-body"  style="color:LightSeaGreen ;">
+<div class="panel panel-info" style="width:800px; margin:auto; ">
+<div class="panel-heading"><h3>About us</h3></div>
+  <div class="panel-body"  style="color:LightSeaGreen; Text-align:left;">
 
 <p>When designing the application we split the tasks into groups of people who felt comfortable with what they were doing.
 Maddy & Matt worked with CSS and HTML, while Tamara worked with JavaScript and Ashley worked with Python and set up the Minecraft server.</p>
