--- a/Webpage/power.html
+++ b/Webpage/power.html
@@ -27,8 +27,8 @@
 <p style="margin-top:20px">
 
 
-<div class="panel panel-info" style="width:800px; margin-left:auto">
-<div class="panel-heading">Power Usage</div>
+<div class="panel panel-info" style="width:800px; margin:auto">
+<div class="panel-heading"><h3>Power Usage</h3></div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
 
 <h4>Current usage: <span id="usage"></span> kWh</h4>
