--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -26,10 +26,10 @@
 		</ul>
 	</div>
 	
-	<div class="page-header" >
-      <p><h3 style="display:block"><img id="iconx" src="">&nbsp;&nbsp;Detailed current weather for <span id="APILocation"></span></h3></p>
-    </div>	
-	<ul class="list-group">
+	<div class="panel panel-info" style="width:800px; margin:auto">
+<div class="panel-heading"><p><h3 style="display:block"><img id="iconx" src="">&nbsp;&nbsp;Detailed current weather for <span id="APILocation"></span></h3></p></div>
+  <div class="panel-body"  style="color:LightSeaGreen;">
+
 	
 	
 <ul class="list-group" style="color:black; margin-bottom:-1px">
@@ -39,8 +39,9 @@
   <li class="list-group-item"><b>Barometric Pressure: </b> <span id="currentPressure"></span> mBar</li>
   <li class="list-group-item"><b>Humidity:</b> <span id="currentHumidity"></span>%</li> 
 </ul>
-
-	
+<br>
+</div>
+</div>
 <script type="text/javascript">
 	getweather();
 	geticon();
