--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -26,10 +26,9 @@
 		</ul>
 	</div>
 
-<div class="panel panel-info" style="width:800px;">
-<div class="panel-heading">Lights Status <span id="lightsStatus" class="label label-success">Fail</span></div>
+<div class="panel panel-info" style="width:800px; margin:auto; ">
+<div class="panel-heading"><h3>Lights Status</h3> <span id="lightsStatus" class="label label-success">Fail</span></div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
-<br>
 <label class="btn btn-default" onclick="LightsOn(true)" name="sex"><input type="radio" name="sex" value="On">Lights On</input></label>
 <label class="btn btn-default" onclick="LightsOn(false)" name="sex"><input type="radio" name="sex" value="Off">Lights Off</input></label
 </form>
