--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -27,8 +27,8 @@
 	
 	<br>
 	
-<div class="panel panel-info" style="width:800px;">
-<div class="panel-heading">Modes</div>
+<div class="panel panel-info" style="width:800px; margin:auto;">
+<div class="panel-heading"><h3>Modes</h3></div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
 <input type="radio" name="sex" value="Holiday" onclick="changeMode(holiday)"> Holiday mode<br>
 <p> This is a mode which turns off the power in your home for when you are away for a long period of time</p><br>
@@ -45,8 +45,8 @@
 <br>
 <br>
 
-<div class="panel panel-info" style="width:800px;">
-<div class="panel-heading">Change location</div>
+<div class="panel panel-info" style="width:800px; margin:auto;">
+<div class="panel-heading"><h3>Change location</h3></div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
 
 <select id="location">
