--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -31,10 +31,9 @@
   	</div>
     -->
 	
-    <div class="page-header">
-      <p><h3>Outdoor temperature: <span id="OutdoorTemp"></span>&deg;C</h3></p>
-    </div>
-	
+	<div class="panel panel-info" style="width:800px; margin:auto;">
+	<div class="panel-heading"><h3>Outdoor temperature: <span id="OutdoorTemp"></span>&deg;C</h3></div>
+	<div class="panel-body"  style="color:LightSeaGreen ;">
 	
     <div class="page-header">
       <h3>Temperature</h3><small>Select a temperature for inside your home</small>
