--- a/Webpage/power.html
+++ b/Webpage/power.html
@@ -32,7 +32,7 @@
   <div class="panel-body"  style="color:LightSeaGreen ;">
 
 <h4>Current usage: <span id="usage"></span> kWh</h4>
-<h4>Cost per hour:  <span id="cost"></span> &pound;0.1344 </h4>
+<h4>Cost per hour:  &pound;<span id="cost"></span></h4>
 </div>
 
 </p>
