--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -40,7 +40,7 @@ Pod's interface is clean and simple, with an intuitive layout. This allows for q
 </div>
 </div>
 <br><br>
-<div class="panel panel-info" style="width:800px; margin:auto; ">
+<div class="panel panel-info" style="container; margin:auto; ">
 <div class="panel-heading"><h3>About us</h3></div>
   <div class="panel-body"  style="color:LightSeaGreen; Text-align:left;">
 
