--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -56,7 +56,7 @@
 	  <!-- WINDOWS STUFF AFTER THIS! -->
 	  <div class="container">
 		
-<div class="panel panel-info" style="width:800px; margin:auto;">
+<div class="panel panel-info" style="container; margin:auto;">
 <div class="panel-heading"><h3>Windows Status <span id="windowStatus" class="label label-success">Fail</span></h3>	</div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
 	
