--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -27,7 +27,7 @@
 	
 	<br>
 	
-<div class="panel panel-info" style="width:800px; margin:auto;">
+<div class="panel panel-info" style="container; margin:auto;">
 <div class="panel-heading"><h3>Modes</h3></div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
 <input type="radio" name="sex" value="Holiday" onclick="changeMode(holiday)"> Holiday mode<br>
