--- a/Webpage/power.html
+++ b/Webpage/power.html
@@ -27,7 +27,7 @@
 <p style="margin-top:20px">
 
 
-<div class="panel panel-info" style="width:800px; margin:auto">
+<div class="panel panel-info" style="container; margin:auto">
 <div class="panel-heading"><h3>Power Usage</h3></div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
 
