what did i even do
idk

--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -26,7 +26,7 @@
 		</ul>
 	</div>
 
-<div class="panel panel-info" style="container; margin:auto; ">
+<div class="panel panel-info" style="width:800px; margin:auto; ">
 <div class="panel-heading"><h3>Lights Status</h3> <span id="lightsStatus" class="label label-success">Fail</span></div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
 <label class="btn btn-default" onclick="LightsOn(true)" name="sex"><input type="radio" name="sex" value="On">Lights On</input></label>
