--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -26,7 +26,7 @@
 		</ul>
 	</div>
 	
-	<div class="panel panel-info" style="container; margin:auto">
+	<div class="panel panel-info" style="width:800px; margin:auto">
 <div class="panel-heading"><p><h3 style="display:block"><img id="iconx" src="">&nbsp;&nbsp;Detailed current weather for <span id="APILocation"></span></h3></p></div>
   <div class="panel-body"  style="color:LightSeaGreen;">
 
