--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -8,12 +8,9 @@
 	  <link href="css/bootstrap.css" rel="stylesheet" media="screen" type="text/css" />
 	  <!-- Bootstrap JS relies on jQuery -->
 
-	  <script src="js/jquery-1.11.1.js" type="text/javascript">
-	</script>
-	  <script src="js/bootstrap.js" type="text/javascript">
-	</script>
-	  <script src="js/pod.js" type="text/javascript">
-	</script>
+	  <script src="js/jquery-1.11.1.js" type="text/javascript"></script>
+	  <script src="js/bootstrap.js" type="text/javascript"></script>
+	  <script src="js/pod.js" type="text/javascript"></script>
 	</head>
 
 	<body>
@@ -30,8 +27,8 @@
 		  <li><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 		</ul>
 	</div>
-	
-	<div class="panel panel-info" style="width:800px; margin:auto;">
+<div class="container">
+	<div class="panel panel-info">
 <div class="panel-heading"><h3>Door Status <span id="doorStatus" class="label label-success">Fail</span></h3></div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
 		<div id="Alert" style="display: nine; margin:auto">
@@ -43,20 +40,16 @@
 		</div>
 		</div>
 		<div class="btn-group btn-group-unmargin">
-		  <button type="button" style="margin:auto" class="btn btn-primary" onclick="doorChange(true)">Open
-		  Doors</button> <button type="button" class="btn btn-danger" onclick=
-		  "doorChange(false)">Lock Doors</button>
+		  <button type="button" class="btn btn-primary" onclick="doorChange(true)">Open Doors</button>
+		  <button type="button" class="btn btn-danger" id="doorsLock" onclick="doorChange(false)">Lock Doors</button>
 		</div>
 		<br>
 	  </div>
 	  </div>
 	  <br>
 	  <br>
-	  
-	  <!-- WINDOWS STUFF AFTER THIS! -->
-	  <div class="container">
 		
-<div class="panel panel-info" style="container; margin:auto;">
+<div class="panel panel-info">
 <div class="panel-heading"><h3>Windows Status <span id="windowStatus" class="label label-success">Fail</span></h3>	</div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
 	
@@ -67,8 +60,9 @@
 		</div><br>
 </div>
 </div>
-
-		<script>
+</div>
+		<script type="text/javascript">
+			$('#doorsLock').click(function(){ doorChange(false) });
 			windowStatus();
 			doorsStatus();
 		</script>
