--- a/Webpage/power.html
+++ b/Webpage/power.html
@@ -27,12 +27,12 @@
 <p style="margin-top:20px">
 
 
-<div class="panel panel-info" style="container; margin:auto">
+<div class="panel panel-info" style="width:800px; margin:auto">
 <div class="panel-heading"><h3>Power Usage</h3></div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
 
 <h4>Current usage: <span id="usage"></span> kWh</h4>
-<h4>Cost per hour:  &pound;<span id="cost"></span></h4>
+<h4>Cost per hour:  <span id="cost"></span> &pound;0.1344 </h4>
 </div>
 
 </p>
