--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -31,7 +31,7 @@
   	</div>
     -->
 	
-	<div class="panel panel-info" style="container; margin:auto;">
+	<div class="panel panel-info" style="width:800px; margin:auto;">
 	<div class="panel-heading"><h3>Outdoor temperature: <span id="OutdoorTemp"></span>&deg;C</h3></div>
 	<div class="panel-body"  style="color:LightSeaGreen ;">
 	
