halfway through flood stuff

--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -66,6 +66,20 @@
 <h4><b>Current location: </b><span id="APILocation"></span></h4>
 </div>
 </div>
+
+<div class="panel panel-info" style="width:800px; margin:auto;">
+<div class="panel-heading"><h3>Flood Your House</h3></div>
+  <div class="panel-body"  style="color:LightSeaGreen ;">
+  
+  <div class="btn-group">
+  <button type="button" class="btn btn-default" id="FLOOD">FLOOD</button>
+</div>
+  
+  
+</div>
+</div>
+
+
 <!--
 <form name="input" action="demo_form_action.asp" method="get">
 Username: <input type="text" name="user">
