--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -66,13 +66,14 @@
 <h4><b>Current location: </b><span id="APILocation"></span></h4>
 </div>
 </div>
-
+<br>
+<br>
 <div class="panel panel-info" style="width:800px; margin:auto;">
-<div class="panel-heading"><h3>Flood Your House</h3></div>
+<div class="panel-heading"><h3>Flood Your House <span id="FLOODSTATUS" class="label label-success">Fail</span></h3>	</div>
   <div class="panel-body"  style="color:LightSeaGreen ;">
   
   <div class="btn-group">
-  <button type="button" class="btn btn-default" id="FLOOD">FLOOD</button>
+  <button type="button" class="btn btn-default" id="FLOOD(true)" onclick >FLOOD</button>
 </div>
   
   
@@ -108,11 +109,9 @@ Username: <input type="text" name="user">
 		
 		$('#location').val("selectedIndex", -1);
 	});
-</script>
 
-<script>
 getLocationFromAPI();
-updateLocation();
+FLOODSTATUS();
 changeMode();
 </script>
 </body>
